--- a/contacto.html
+++ b/contacto.html
@@ -88,6 +88,7 @@
         </div>
     </footer>
     <script src="js/modernizr.js"></script>
-    <script src="js/scripts.js"></script>
+    <!-- <script src="js/scripts.js"></script> -->
+    <script src="js/validar-formulario.js"></script>
 </body>
 </html>
